# internal/controller/getUserByID.go
@@ -2,10 +2,14 @@ package controller
 
 import (
 	swgModels "github.com/cfif1982/cards/internal/infrastructure/swagger/models"
+	"github.com/google/uuid"
 )
 
-func (c *controller) GetUserByID(userID int64) (*swgModels.User, error) {
-	user, err := c.userUseCases.GetByID(userID)
+func (c *controller) GetUserByID(userID string) (*swgModels.User, error) {
+	// конвертируем строку в uuid
+	userUUID, _ := uuid.Parse(userID)
+
+	user, err := c.userUseCases.GetByID(userUUID)
 
 	if err != nil {
 		return nil, err
@@ -14,7 +18,7 @@ func (c *controller) GetUserByID(userID int64) (*swgModels.User, error) {
 	// вернуть нужно структуру банка для ответа
 	// формируем структуру для ответа. С ней же будем рабоать для вставки в бд
 	result := swgModels.User{
-		UUID:      int64(user.UUID.ID()),
+		ID:        user.ID.String(),
 		Name:      user.Name,
 		LastName:  user.LastName,
 		Email:     user.Email,
